NLopt 1.0.1 (13 Nov. 2008)

* Allow user to override Matlab-plugin installation directory with
  MEX_INSTALL_DIR.

* Bug fix in my DIRECT code that prevented convergence (DIRECT-L unaffected).

* MLSL needs a nonzero default ftol_rel and/or xtol_rel to ensure that
  its local searches terminate; use roughly machine precision as defaults.

NLopt 1.0 (11 Nov. 2008)

* Initial public release.