@@ -28,7 +28,6 @@
 #include "nlopt.h"
 #include "cdirect.h"
 #include "redblack.h"
-#include "config.h"
 
 #define MIN(a,b) ((a) < (b) ? (a) : (b))
 #define MAX(a,b) ((a) > (b) ? (a) : (b))
