@@ -1,3 +1,5 @@
+AM_CPPFLAGS = -I$(top_srcdir)/util -I$(top_srcdir)/api
+
 noinst_LTLIBRARIES = libdirect.la
 libdirect_la_SOURCES = DIRect.c direct_wrap.c DIRserial.c DIRsubrout.c	\
 direct-internal.h direct.h
